[project]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "axelander-hart",email = "axel-hartmann@gmx.net"}
]
readme = "README.md"
packages = [{ include = "trading_bot", from = "src" }]

requires-python = ">=3.13"
dependencies = [
    "binance-connector (>=3.12.0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
